# legado_flutter

./: .gitignore  CURRENT_STATUS.md  JAVA_EXTENSION_STATUS.md  README.md  build_android_debug.sh  flutter_rust_bridge.yaml  legado.db
core/: Cargo.toml
core/api-server/: Cargo.toml
core/api-server/src/: dto.rs  error.rs  main.rs  state.rs  util.rs
core/bridge/: Cargo.toml
core/bridge/.cargo/: config.toml
core/bridge/src/: api.rs  frb_generated.rs  lib.rs
core/bridge/tests/: download_test.rs
core/core-net/: Cargo.toml
core/core-net/src/: client.rs  cookie.rs  downloader.rs  encoding.rs  lib.rs  proxy.rs  retry.rs
core/core-parser/: Cargo.toml
core/core-parser/src/: cleaner.rs  epub.rs  lib.rs  txt.rs  types.rs  umd.rs
core/core-source/: Cargo.toml
core/core-source/src/: lib.rs  parser.rs  (+4 more)
core/core-storage/: Cargo.toml
core/core-storage/src/: book_dao.rs  cache_dao.rs  chapter_dao.rs  database.rs  download_dao.rs  lib.rs  models.rs  progress_dao.rs  replace_rule_dao.rs  source_dao.rs
docs/: ARCHITECTURE.md  BOOK_SOURCE_READER_IMPROVEMENT_PLAN.md  LEGADO_SOURCE_COMPAT_PLAN.md  READER_ENHANCEMENT_PLAN.md  READER_FEATURE_PLAN.md  ROADMAP.md  phase1_code_review_report.md  plan.md
flutter_app/: README.md  analysis_options.yaml  pubspec.yaml
flutter_app/android/: gradle.properties
flutter_app/lib/: main.dart
flutter_app/linux/: CMakeLists.txt
flutter_app/test/: bookshelf_page_test.dart  download_page_test.dart  reader_page_test.dart  search_page_test.dart  source_page_test.dart  widget_test.dart
sy/: 1778070297.json  22biqu - grok.json  axdzs.json  sdg.json
(+68 files in other folders)
