[package]
name = "core-net"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
rustls = "0.23"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Cookie 持久化管理
cookie_store = "0.21"
# 代理支持
url = "2.5"
urlencoding = "2"
# 重试机制
tokio-retry = "0.3"
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
# 编码处理
encoding_rs = "0.8"
base64 = "0.21"
uuid = { version = "1.10", features = ["v4"] }

[dev-dependencies]
httpmock = "0.7"
